--- a/client/clientDashboard.html
+++ b/client/clientDashboard.html
@@ -100,7 +100,7 @@
                     <!-- User Dropdown -->
                     <div id="userMenu"
                         class="hidden absolute right-0 mt-4 w-56 bg-white rounded-2xl shadow-xl border z-50">
-                        <button class="w-full flex items-center gap-3 p-4 hover:bg-slate-50">
+                        <button onclick="switchTab('profile')" class="w-full flex items-center gap-3 p-4 hover:bg-slate-50">
                             <i data-lucide="user" class="w-4 h-4"></i> My Profile
                         </button>
                         <button onclick="switchTab('account-settings')" class="w-full flex items-center gap-3 p-4 hover:bg-slate-50">
