--- a/client/clientDashboard.html
+++ b/client/clientDashboard.html
@@ -195,7 +195,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Golden Taste', 'Fast Food & Burgers', 4.8, '20-30 mins', '₱50', '₱200')">
+                        <div class="p-4" onclick="openStorePage('Golden Taste')">
                             <h3 class="text-lg font-bold text-gray-900">Golden Taste</h3>
                             <p class="text-sm text-gray-600 mt-1">Delicious burgers, fried chicken, and crispy fries prepared fresh daily.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -213,7 +213,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Fresh Greens', 'Salads & Healthy Bowls', 4.6, '15-25 mins', '₱40', '₱150')">
+                        <div class="p-4" onclick="openStorePage('Fresh Greens')">
                             <h3 class="text-lg font-bold text-gray-900">Fresh Greens</h3>
                             <p class="text-sm text-gray-600 mt-1">Fresh organic salads, acai bowls, and nutritious meal prep options.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -231,7 +231,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Spicy Wok', 'Asian & Chinese Cuisine', 4.7, '25-35 mins', '₱60', '₱250')">
+                        <div class="p-4" onclick="openStorePage('Spicy Wok')">
                             <h3 class="text-lg font-bold text-gray-900">Spicy Wok</h3>
                             <p class="text-sm text-gray-600 mt-1">Authentic Asian dishes, stir-fries, and noodles with bold flavors.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -249,7 +249,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Coffee Corner', 'Café & Pastries', 4.9, '10-15 mins', '₱30', '₱100')">
+                        <div class="p-4" onclick="openStorePage('Coffee Corner')">
                             <h3 class="text-lg font-bold text-gray-900">Coffee Corner</h3>
                             <p class="text-sm text-gray-600 mt-1">Specialty coffee, artisanal pastries, and cozy breakfast favorites.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -267,7 +267,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Sweet Bites', 'Desserts & Confectionery', 4.8, '20-25 mins', '₱45', '₱180')">
+                        <div class="p-4" onclick="openStorePage('Sweet Bites')">
                             <h3 class="text-lg font-bold text-gray-900">Sweet Bites</h3>
                             <p class="text-sm text-gray-600 mt-1">Delectable desserts, cakes, ice cream, and sweet treats for any occasion.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -285,7 +285,7 @@
                                 <svg class="w-6 h-6 text-gray-400 favorite-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
                             </button>
                         </div>
-                        <div class="p-4" onclick="openStoreModal('Pasta Paradise', 'Italian Cuisine', 4.7, '30-40 mins', '₱70', '₱300')">
+                        <div class="p-4" onclick="openStorePage('Pasta Paradise')">
                             <h3 class="text-lg font-bold text-gray-900">Pasta Paradise</h3>
                             <p class="text-sm text-gray-600 mt-1">Authentic Italian pasta, risotto, and traditional dishes made with fresh ingredients.</p>
                             <div class="mt-3 flex justify-between items-center text-sm">
@@ -328,7 +328,7 @@
                 </div>
 
                 <!-- Orders Detail Cards -->
-                <div class="space-y-4">
+                <div id="ordersList" class="space-y-4">
                     <!-- Order Card 1 -->
                     <div class="bg-white rounded-2xl border shadow-sm overflow-hidden hover:shadow-md transition-shadow">
                         <div class="p-6">
@@ -1047,6 +1047,12 @@
             document.body.insertAdjacentHTML('beforeend', modalHTML);
         }
 
+        // Navigate to store detail page (new window)
+        function openStorePage(storeName) {
+            const url = 'store.html?store=' + encodeURIComponent(storeName);
+            window.location.href = url;
+        }
+
         function closeStoreModal() {
             const modal = document.getElementById('storeModal');
             if (modal) {
@@ -1280,6 +1286,71 @@
         document.addEventListener('DOMContentLoaded', () => {
             renderConversationsList();
         });
+
+        // Add sample notifications if none exist
+        document.addEventListener('DOMContentLoaded', () => {
+            const notifs = getNotifications();
+            if (notifs.length === 0) {
+                addNotification('order', 'Order Delivered', 'Your order #ORD-1023 was delivered', 'orders');
+                addNotification('order', 'Order Update', 'Order #ORD-1024 is out for delivery', 'orders');
+                addNotification('store', 'New Store', 'Sweet Bites added new desserts', 'stores');
+            }
+            // load stored orders into orders list
+            loadStoredOrders();
+            // if redirected after checkout, open orders tab
+            try {
+                const openOrders = JSON.parse(localStorage.getItem('openOrdersTab') || 'false');
+                if (openOrders) {
+                    switchTab('orders');
+                    localStorage.setItem('openOrdersTab', 'false');
+                }
+            } catch(e) {}
+        });
+
+        // Load stored orders and append to orders list
+        function loadStoredOrders() {
+            const container = document.getElementById('ordersList');
+            if (!container) return;
+            const stored = JSON.parse(localStorage.getItem('orders') || '[]');
+            stored.forEach(o => {
+                const el = document.createElement('div');
+                el.className = 'bg-white rounded-2xl border shadow-sm overflow-hidden hover:shadow-md transition-shadow';
+                el.innerHTML = `
+                    <div class="p-6">
+                        <div class="flex justify-between items-start mb-4">
+                            <div>
+                                <button class="text-xl font-bold text-blue-600 hover:text-blue-700 hover:underline transition">${o.store}</button>
+                                <p class="text-xs text-slate-500 mt-2">Order #${o.id} • ${o.date}</p>
+                            </div>
+                            <div class="text-right">
+                                <p class="text-xl font-bold text-blue-600">${formatCurrency(o.total)}</p>
+                            </div>
+                        </div>
+                        <div class="border-t pt-4 mt-4">
+                            <h5 class="font-semibold text-sm mb-3">Order Items</h5>
+                            <div class="space-y-3">
+                                <div class="flex gap-3">
+                                    <img src="${o.productImage || 'https://via.placeholder.com/80'}" alt="${o.productName}" class="w-20 h-20 rounded-lg object-cover">
+                                    <div class="flex-1">
+                                        <p class="font-semibold text-sm">${o.productName}</p>
+                                        <p class="text-xs text-slate-500">Quantity: ${o.quantity}</p>
+                                        <p class="text-sm font-bold text-blue-600 mt-1">${formatCurrency(o.price)}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="border-t mt-4 pt-4">
+                            <button class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg transition text-sm">Track Order</button>
+                        </div>
+                    </div>
+                `;
+                container.appendChild(el);
+            });
+        }
+
+        function formatCurrency(v) {
+            return '$' + parseFloat(v).toFixed(2);
+        }
 
         // ===== Profile persistence and avatar handling =====
         function loadProfile() {
